--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.4",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
