--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/uuid": "^9.0.0",
     "@vercel/analytics": "^0.1.5",
     "chatgpt": "^0.4.2",
+    "clsx": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.3",
     "react-markdown": "^8.0.4",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.3",
