--- a/backstab/Cargo.toml
+++ b/backstab/Cargo.toml
@@ -9,3 +9,4 @@ ws = { package = "rocket_ws", git = "https://github.com/SergioBenitez/Rocket.git
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ts-rs = "6.2"
+async-broadcast = "0.5"
