--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.5.6",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.1.3",
     "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/uuid": "^9.0.0",
-    "@vercel/analytics": "^0.1.5",
-    "chatgpt": "^0.4.2",
     "clsx": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
@@ -27,14 +22,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
-    "react-markdown": "^8.0.4",
-    "react-syntax-highlighter": "^15.5.0",
-    "typescript": "4.9.3",
-    "uuid": "^9.0.0"
+    "typescript": "4.9.3"
   },
   "devDependencies": {
     "@types/react-lottie": "^1.2.6",
-    "@types/react-syntax-highlighter": "^15.5.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
