added types within their own module. Added aigent for the Bot player. Moved types out of backstab. Changed the frontend binds to point to aimongus_types

--- a/backstab/Cargo.toml
+++ b/backstab/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aimongus_types = { path = "../aimongus_types", features = ["server"] }
 rocket = { package = "rocket", git = "https://github.com/SergioBenitez/Rocket.git", rev = "a82508b403420bd941c32ddec3ee3e4875f2b8a5" }
 ws = { package = "rocket_ws", git = "https://github.com/SergioBenitez/Rocket.git", rev = "a82508b403420bd941c32ddec3ee3e4875f2b8a5" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ts-rs = "6.2"
 async-broadcast = "0.5"
 futures = "0.3"
 rand = "0.8.5"
