--- a/aigent/Cargo.toml
+++ b/aigent/Cargo.toml
@@ -15,3 +15,6 @@ tokio = { version = "1.28.0", features = [
 tokio-tungstenite = "0.18.0"
 url = "2.3.1"
 aimongus_types = { path = "../aimongus_types" }
+reqwest = "0.11.16"
+serde = "1.0.160"
+serde_json = "1.0.96"
