--- a/aigent/Cargo.toml
+++ b/aigent/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { version = "1.28.0", features = [
     "io-std",
     "rt-multi-thread",
 ] }
-tokio-tungstenite = "0.18.0"
+tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
 url = "2.3.1"
 aimongus_types = { path = "../aimongus_types" }
 rand = "0.8.5"
