--- a/aigent/Cargo.toml
+++ b/aigent/Cargo.toml
@@ -15,7 +15,9 @@ tokio = { version = "1.28.0", features = [
 tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
 url = "2.3.1"
 aimongus_types = { path = "../aimongus_types" }
+openai = { path = "../openai" }
 rand = "0.8.5"
 reqwest = "0.11.16"
 serde = "1.0.160"
 serde_json = "1.0.96"
+dotenv = "0.15.0"
