--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
+    "react-transition-group": "^4.4.5",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@types/react-lottie": "^1.2.6",
+    "@types/react-transition-group": "^4.4.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
