--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
